feat(payments): added the format to national number on process payment and remove userId in create checkout payment details infrastructure